feat: adds initial functions for transaction
