# application/dto/dto.go
@@ -1,6 +1,9 @@
 package dto
 
-import "github.com/S4mkiel/finance-backend/domain/dto"
+import (
+	"github.com/S4mkiel/finance-backend/domain/dto"
+	"time"
+)
 
 type BaseDto struct {
 	Success *bool   `json:"success;default:false"`
@@ -21,4 +24,31 @@ type GetUsersInDto struct {
 type FindUserInDto struct {
 	Email    *string
 	Password *string
+}
+
+type CreateTransactionInDto struct {
+	UserID          *string
+	Amount          *float64
+	TransactionType *int
+	Category        *int
+	Date            *time.Time
+	Notes           *string
+	Currency        *string
+}
+
+type GetTransactionsInDto struct {
+	UserID          *string
+	StartAmount     *float64
+	EndAmount       *float64
+	TransactionType *int
+	Category        *int
+	StartDate       *time.Time
+	EndDate         *time.Time
+	Notes           *string
+	Currency        *string
+}
+
+type FindTransactionInDto struct {
+	UserID *string
+	ID     *string
 }
